added header image

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -20,7 +20,7 @@ html
 		= partial 'partials/navbar'
 		
 		header#header
-			.banner =link_to image_tag('logo.svg'), 'test'
+			.banner =link_to image_tag('header.svg'), 'test'
 
 		section#content
 			== yield
