--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -158,8 +158,8 @@ header#header
 	padding-bottom: $box-pad/2
 	.banner
 		// background: fade-out(olive, 0.5)
-		img
-			visibility: hidden
+		// img
+			// visibility: hidden
 		
 		width: 100%
 		
