--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -157,6 +157,7 @@ body.index
 header#header
 	padding-bottom: $box-pad/2
 	.banner
+		padding: $box-pad 0
 		// background: fade-out(olive, 0.5)
 		// img
 			// visibility: hidden
