--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -15,12 +15,6 @@ html
 		= stylesheet_link_tag :application
 		= javascript_include_tag :application
 
-	body class=(page_classes if page_classes)
-		
+	body
 		= partial 'partials/navbar'
-		
-		header#header
-			.banner =link_to image_tag('header.svg'), 'test'
-
-		section#content
-			== yield
+		== yield
