--- a/source/partials/_navbar.slim
+++ b/source/partials/_navbar.slim
@@ -1,17 +1,22 @@
+javascript:
+	$('body').scrollspy({ target: '#categs' });
+
 nav#navbar
 	.wrap
 		= link_to image_tag('logo.svg'), '/', :class => 'logo'
-		.ctg
-			select
-				option =link_to 'FOOD', 'categ'
-				option =link_to 'FINANCE', 'categ'
-				option =link_to 'TECH', 'categ'
-				option =link_to 'FASHION', 'categ'
-				option =link_to 'SPORT', 'categ'
-				option =link_to 'DESIGN', 'categ'
-				option =link_to 'MEDIA', 'categ'
-				option =link_to 'JOBS', 'categ'
-				option =link_to 'SOCIAL', 'categ'
+		
+		#categs.ctg.dropdown
+			button type="button" id="listcateg" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" INDUSTRY
+			ul.nav role="tablist" aria-labelledby="listcateg"
+				li =link_to 'FOOD', '#food'
+				li =link_to 'FINANCE', '#finance'
+				li =link_to 'TECH', '#tech'
+				li =link_to 'FASHION', '#FASHION'
+				li =link_to 'SPORT', '#SPORT'
+				li =link_to 'DESIGN', '#DESIGN'
+				li =link_to 'MEDIA', '#MEDIA'
+				li =link_to 'JOBS', '#JOBS'
+				li =link_to 'SOCIAL', '#SOCIAL'		
 		
 		.util
 			ul
@@ -24,6 +29,6 @@ nav#navbar
 				li =link_to 'newsletter' do
 					svg viewBox="0 0 1280 900": use xlink:href="#icon-mail"
 				
-				li.submit =link_to 'Add Yours', '/'
+				li.submit =link_to 'Add Yours', 'submit'
 
 	= partial 'partials/icons'
