--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -1,4 +1,3 @@
-// @import 'bootstrap'
 @import 'normalize'
 @import 'variables'
 @import 'mixins'
@@ -17,7 +16,13 @@ body,
 html
 	height: 100%
 
+fieldset
+	padding: 0
+	margin: 0
+	border: 0
+
 body
+	position: relative
 	color: $blumarin
 	background-size: 23px 23px
 	font-family: $font-family-base
@@ -34,14 +39,8 @@ section#content
 	margin-left: auto
 	margin-right: auto
 
-.fl
-	float: left
-
-.fr
-	float: right
 
 // Some mixins -------------------------------------------//
-
 =desaturate
 	filter: gray //IE6-9
 	filter: grayscale(1)  //Firefox 35+
@@ -66,9 +65,11 @@ section#content
 				&.w#{$i}
 					width: ($i * 100/$cols) * 1%
 
-// -------------------------------------------------------- //
 
-// SCAFOLDING -------------------
+
+// -------------------------------------------------------- //
+// SCAFOLDING --------------------------------------------- //
+// -------------------------------------------------------- //
 
 +makesomeresponsivecolumns(12)
 
@@ -89,57 +90,13 @@ html:not(.no-touchevents).fixed header#header nav.visible
 
 // -------------------------------------------------------- //
 nav#navbar
-	position: relative
 	background: white
 	height: $nav-height
 	z-index: 9999
-
-
-	@media only screen and (min-width: $container-lg)
-		
-
-		&.notOnTop
-			+place(fixed, 0, 0, auto, 0)
-			height: $nav-height
-			top: - $nav-height
-			+transition(top .2s linear)
-			
-		&.scrollup
-			top: 0
-
-
-.toggle-nav
-	@media only screen and (min-width: 800px)
-		display: none
-	&.active
-		+rotate(45deg)
-		span
-			&:first-child
-				display: none
-			&:last-child
-				+rotate(90deg)
-				margin-top: -5px
-			
-			margin-top: 5px
-			+transition(all, 0.4s)
-			background: white
-
-	+square(40px)
-	padding: 14px 0 0 10px
-	background: black
-	border-radius: 100%
 	position: fixed
-	right: 30px
-	top: 25px
-	z-index: 9
-	cursor: pointer
-	span
-		display: block
-		background: white
-		width: 20px
-		height: 2px
-		margin-bottom: 3px
-
+	top: 0
+	left: 0
+	right: 0
 
 a.logo
 	padding-top: 6px
@@ -149,11 +106,8 @@ a.logo
 		display: block
 		width: 153px
 
-// -------------------------------------------------------- //
-body.index
-	&.margintop
-		padding-top: $nav-height
 
+// -------------------------------------------------------- //
 header#header
 	padding-bottom: $box-pad/2
 	.banner
@@ -213,47 +167,101 @@ header#header
 			a
 				padding-top: 8px
 
-
-
-
 .ctg
-	padding-top: 6px
-	padding-left: $box-pad / 2
-	width: 150px
-	float: left
-	
-	select
-		height: 48px
-		&:focus
-			outline: none
-		&:after
-			content: 'test'
-			display: block
-			position: absolute
-		color: $blumarin
-		font-weight: bold
-		width: 100%
-		overflow: hidden
-		padding: 14px 15px
-		margin: 0
-		border: 2px solid $blumarin
-		-webkit-appearance: none
-		-moz-appearance: none
-		appearance: none
-		box-shadow: none
-		border-radius: 0
-		+background-image('arrow_ico.svg')
+	&.dropdown
+		&.open
+			height: auto
+
+	// 		li
+	// 			height: 44px
+	// 			opacity: 1
+	// li
+	// 	+transition(200ms, linear)
+	// 	overflow: hidden
+	// 	height: 0
+	// 	opacity: 0
+
+	button
+		background-image: url("data:image/svg+xml;utf8,<svg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 1794.1 800' enable-background='new 0 0 1794.1 800' xml:space='preserve'><g><polygon fill='#3a3b73' points='644.2,800 46.3,210.5 256.8,0 644.2,387.4 1031.6,0 1233.7,210.5'/></g></svg>")
 		background-color: transparent
 		background-size: 30px 30px
 		background-position: right 7px
 		background-repeat: no-repeat
+		color: transparent
+		+place(absolute, 0px, 0px, auto, auto)
+		z-index: 99
+		margin: 0
+		border: 0
+		padding: 12px 10px 14px
+		+transition(200ms)
+		
+		&:hover
+			background-position: right 10px
+		&:focus,
+		&:active
+			outline: none
 
-// Custom select
-// --------------------------------------
+	height: 48px
+	position: relative
+	overflow: hidden
+	width: 145px
+	float: left
+	margin-top: 6px
+	margin-left: $box-pad / 2
+	border: 2px solid $blumarin
+	background: white
+
+	li,
+	button,
+	a
+		width: 100%
+		display: block
+	
+	li
+		&.active
+			z-index: 0
+			position: absolute
+			background: white
+			top: 0
+			left: 0
+		
+		a
+			&.active
+				// outline: 3px solid red
+			&:hover
+				color: white
+				background: $blumarin
+			
+			+transition(100ms)
+			display: block
+			padding: 10px
+			color: $blumarin
+			font-weight: bold
+			width: 100%
+
+	ul
+		text-align: left
+		display: block
+		font-weight: bold
+		
+		&:before
+			content: 'INDUSTRY'
+			padding: 10px 0px 10px 10px
+			display: block
+		// margin-top: 60px
+
+
+
+
+
+
+
+
 ul.startups
 	+clearfix
 	display: block
 	border-right: 1px solid $blumarin
+	border-bottom: 1px solid $blumarin
 	li
 		box-shadow: inset 1px 1px 0px $blumarin
 		float: left
@@ -268,11 +276,22 @@ ul.startups
 				+square(100%)
 				display: table
 				
-				a
-					vertical-align: middle
-					display: table-cell
-					width: 100%
+		a
+			width: 100%
+			display: table-cell
+			vertical-align: middle
+			background: none
+			background-size: 50% auto
+			background-repeat: no-repeat
+			background-position: center center
+			// backdrop-filter: grayscale(1) contrast(3) blur(1px)
+			// background-color: fade-out($blumarin, 0.4)
+			// background-blend-mode: desaturate
 
+		img
+			-webkit-filter: sepia(1) hue-rotate(190deg)
+			// filter: sepia(1) hue-rotate(200deg)
+		
 		&:before
 			content: ""
 			display: block
@@ -315,15 +334,9 @@ ul.startups
 		max-width: 100px
 
 
-#content
-	
 
 
 
-
-// *
-
-// 	outline:  1px dotted red
 
 .last
 	// display: block
@@ -331,158 +344,14 @@ ul.startups
 	// background: blue
 
 
-// Contact ------------------------------------------
-
-#addstartup
-	padding-top: $box-pad
-	h1
-		text-align: center
-	
-	+clearfix
-
-	@media only screen and (min-width: $container-lg)
-		max-width: auto
-		// margin: 0 -1 * $box-pad / 2
-
-		> div
-			// outline: 2px solid blue
-			// padding: 0 $box-pad / 2
-			
-			display: inline-block
-			vertical-align: top
-			width: 50%
-			position: relative
-	
-	.info
-		padding: 0 $box-pad / 2 $box-pad $box-pad / 2
-		max-width: $container-big
-	
-	form
-		padding: 0 $box-pad / 2
-		@media only screen and (min-width: $container-lg)
-			padding: 0
-	
 
 
-// $fld-h: 50px
-
-.group
-	&.textarea
-		height: auto
-
-	margin-bottom: 26px
-	padding: 0
-	input, select
-		box-sizing: border-box
-
-.fld
-	&.error, &.required
-		border-bottom: 2px solid red
-	&.valid	
-		border-bottom: 2px solid green
-
-	border: 2px solid white
-	border-bottom: 2px solid $blumarin
-	line-height: 1.4em
-	display: block
-	width: 100%
-	border-radius: 0
-	-webkit-appearance: none
-	color: $blumarin
-	outline: none
-	padding-right: $box-pad
-
-	&:active,
-	&:focus
-		// box-shadow: 0px 2px 0px black
-
-select
-	background: white
-
-input:-webkit-autofill
-	-webkit-box-shadow: 0 0 0px 1000px white inset
-
-label
-	&:after
-		content: ' :'
-
-textarea.expanding.fld
-	border: 2px solid $blumarin
-	height: auto
-	min-height: 50px
-	// padding: 13px 0
-	margin: 0
-	z-index: 3
-	position: relative
-	label
-		position: relative
-		z-index: 1
-	&:focus
-		background-color: white
-	&.valid, &:focus
-		// background-color: white
-		height: auto
-		// z-index: 4
-
-	// max-height: $fld-h
-
-input.btn
-	color: white
-	background: $blumarin
-	display: inline-block
-	width: auto
-	padding: $box-pad / 4 $box-pad / 2
-	&[disabled="disabled"]
-		background: #ccc
-		border: #ccc
-
-.left,
-.right
-	// @media only screen and (max-width: $container-big)
-	// 	padding-left: 0
-	padding-top: $box-pad
-	padding-bottom: $box-pad
-	// padding: 0
-	border: 0
-	margin: 0
-	width: 50%
-	float: left
-	display: block
-
-.left
-	padding-right: $box-pad/2
-	padding-left: $box-pad
-
-.right
-	padding-left: $box-pad/2
-	padding-right: $box-pad
-
-.button
-	padding: $box-pad 0
 
 
-$white: white
-$highlightColorActive: #000
-$blue: rgb(69, 113, 236)
-
-// +square($dim)
-
-// The important CSS
+// ------------------------
+// STARTUP page -----------
 // ------------------------
 
-.control-inline label
-	display: inline
-	position: relative
-
-
-#indicator
-	padding: $box-pad/2
-	position: fixed
-	top: 0
-	left: 0
-
-
-// STARTUP page
 .st-name
 	display: block
 	text-align: center
@@ -535,6 +404,108 @@ ul.st-det
 svg.hide
 	// just in case
 	display: none
+
+
+// ------------------------------------------
+// Submit page ------------------------------
+// ------------------------------------------
+#addstartup
+	padding-top: $box-pad
+	h1
+		text-align: center
+	form
+		padding: 0 $box-pad / 2
+		@media only screen and (min-width: $container-lg)
+			padding: 0
+	
+// form element
+.add-startup
+	max-width: $container-sm
+	+center-block
+
+
+fieldset.double
+	position: relative
+	overflow: hidden
+	margin-left: - $box-pad/2
+	margin-right: - $box-pad/2
+	.group
+		display: inline-block
+		width: 50%
+		padding-left: $box-pad/2
+		padding-right: $box-pad/2
+
+
+
+// $fld-h: 50px
+.group
+	&.textarea
+		height: auto
+	
+	margin-bottom: $box-pad
+
+label
+	&:after
+		content: ' :'
+
+.fld
+	width: 100%
+	padding: $box-pad/4 $box-pad/2
+	background: $blumarin
+	line-height: 1.4em
+	display: block
+	border-radius: 0
+	border: 1px solid $blumarin
+	-webkit-appearance: none
+	color: white
+	outline: none
+
+	&:active,
+	&:focus
+		// box-shadow: 0px 2px 0px black
+
+select.fld
+	background-image: url("data:image/svg+xml;utf8,<svg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 1794.1 800' enable-background='new 0 0 1794.1 800' xml:space='preserve'><g><polygon fill='#FFF' points='644.2,800 46.3,210.5 256.8,0 644.2,387.4 1031.6,0 1233.7,210.5'/></g></svg>")
+
+	background-size: 30px 30px
+	background-position: right 7px
+	background-repeat: no-repeat
+
+textarea.expanding.fld
+	border: 1px solid $blumarin
+	height: auto
+	min-height: 50px
+	margin: 0
+	z-index: 3
+	position: relative
+
+input.btn
+	color: white
+	background: $blumarin
+	display: inline-block
+	width: auto
+	padding: $box-pad / 4 $box-pad / 2
+	&[disabled="disabled"]
+		background: #ccc
+		border: #ccc
+
+.button
+	padding: $box-pad 0
+
+//Override browser form-filling and input highlighting with HTML/CSS
+input:-webkit-autofill
+	-webkit-box-shadow: 0 0 0px 1000px white inset
+
+// Validation ------------------------
+.fld,
+select.fld,
+textarea.fld
+	&.error, &.required
+		border: 1px solid red
+	
+	&.valid	
+		border: 1px solid green
+
 
 
 
