--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -22,6 +22,7 @@ fieldset
 	border: 0
 
 body
+	padding-top: $nav-height
 	position: relative
 	color: $blumarin
 	background-size: 23px 23px
@@ -249,8 +250,6 @@ header#header
 			padding: 10px 0px 10px 10px
 			display: block
 		// margin-top: 60px
-
-
 
 
 
