--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -2,264 +2,18 @@
 title: index
 ---
 header#header
-	.banner =image_tag('header.svg')
-
-/ section#content
-/ ul.startups
-/ 	- startups = JSON.load(open("https://nebulae-dashboard.herokuapp.com/startups-index.json"))
-/ 	- startups.each do |s|
-/ 	  li
-/ 			div
-/ 				div
-/ 					= link_to "#{s["name"].downcase.split(" ").join("-")}" do
-/ 						strong =s["name"]
-/ 						=image_tag s["logo_url"]
-
+  .banner =image_tag('header.svg')
 
 section#content
-	h2#food Parisian Startups in Food
-	ul.startups
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-	h2#finance Parisian Startups in Finance
-	ul.startups
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-	h2#tech Parisian Startups in Tech
-	ul.startups
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
-		li
-			div
-				div
-					a href="#" test
+  - data.categories.each do |c|
+    h2 class="#{c.cat}" 
+      |Parisian Startups in 
+      = c.val
+    ul.startups
+      - startups_in_domain(c.cat).each do |s|
+        li
+          div
+            div
+              = link_to "#{s["name"].downcase.split(" ").join("-")}" do
+                strong =s["name"]
+                =image_tag s["logo_url"]
