--- a/source/startup-template.html.slim
+++ b/source/startup-template.html.slim
@@ -4,7 +4,7 @@ header.st-name
 
 	h1 = name
 	p.details
-		span founded by #{founders} currently has #{employee_count.to_s} employees.
+    span Founded by #{founders}, #{name.capitalize} currently has #{employee_count.to_s} employees.
 .st-info
 	.col.sm-w8.w6
 		p = summary
