--- a/source/stylesheets/application.css.sass
+++ b/source/stylesheets/application.css.sass
@@ -510,7 +510,7 @@ input.btn
 
 //Override browser form-filling and input highlighting with HTML/CSS
 input:-webkit-autofill
-	-webkit-box-shadow: 0 0 0px 1000px white inset
+	-webkit-box-shadow: 0 0 0px 1000px $blumarin inset
 
 // Validation ------------------------
 .fld,
