--- a/source/success.html.slim
+++ b/source/success.html.slim
@@ -3,4 +3,4 @@ title: success
 ---
 
 section#content
-	h1 Your message Reached us. Thank you !
+	h1 style="text-align:center; margin: 100px 0" Your message reached us. Thank you !
