upd description, fix small things

--- a/source/partials/_navbar.slim
+++ b/source/partials/_navbar.slim
@@ -18,7 +18,7 @@ nav#navbar
 
     .util
 			ul
-				li =link_to 'http://twitter.com/parisianstartups' do
+				li =link_to 'http://twitter.com/parisianstartup' do
 					svg viewBox="0 0 13.5 11.2": use xlink:href="#icon-twitter"
 
 				/ li =link_to 'http://facebook.com/parisianstartups' do
