--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -2,13 +2,12 @@ doctype html
 html
 	head
 		= partial 'partials/meta_and_seo'
-		= partial 'partials/og', 
-			locals: { og_image_url: data.site.site_logo,
-			twitter_publisher_handle: data.site.twitter_handle,
-			twitter_page_title: data.site.title,
-			twitter_description_200w: startup_description_helper,
-			twitter_author_handle: data.site.twitter_handle,
-			twitter_image_url: startup_image_helper }
+		= partial 'partials/og', locals: {  og_image_url: data.site.site_logo,
+                                        twitter_publisher_handle: data.site.twitter_handle,
+                                        twitter_page_title: data.site.title,
+                                        twitter_description_200w: startup_description_helper,
+                                        twitter_author_handle: data.site.twitter_handle,
+                                        twitter_image_url: startup_image_helper }
 
 		title = data.site.title
 		link href="//fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css"
