--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -17,4 +17,5 @@ html
 	body
 		= partial 'partials/navbar'
 		== yield
-		= partial 'partials/footer'
+    = partial 'partials/footer'
+    = google_analytics_universal_tag
