--- a/source/layouts/startup-layout.slim
+++ b/source/layouts/startup-layout.slim
@@ -16,10 +16,9 @@ html
 		= stylesheet_link_tag :application
 		= javascript_include_tag :application
 
-
   body
+    = partial 'partials/navbar'
+    section#content 
+      == yield
+    = google_analytics_universal_tag
 
-		= partial 'partials/navbar'
-
-		section#content
-			== yield
