--- a/source/partials/_footer.slim
+++ b/source/partials/_footer.slim
@@ -1,3 +1,3 @@
 footer 
 	| Made possible by all entrepreneurs who submitted their info. Project initiated by 
-	=link_to 'nebulae2016', 'http://nebulae2016.com', :target=> '_blank'
+	=link_to 'nebulae2016', 'http://nebulae2016.com/?utm_source=parisianstartups&utm_medium=web&utm_term=parisianstartups&utm_content=parisianstartups-footerlink&utm_campaign=parisianstartups', :target=> '_blank'
